fixed first section responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,14 @@
     background-color: aqua;
 }
 
-.debug .col-12, .col-8, .col-4{
+.debug .container{
+    background-color: azure;
+}
+
+.debug .card{
     background-color: blueviolet;
-    height: 150px;
+    height: 100px;
+    margin-bottom: 1rem;
 }
 
 /* #endregion debug */
@@ -23,35 +28,36 @@ header{
 }
 
 .container{
-    margin: 0 1rem;
-}
-
-.flex{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-}
-
-.col-12{
-    width: 100%;
-}
-
-[class^="col-"]{
-    padding: 1rem;
+    margin: auto;
+    padding: 0 1rem;
 }
 
 /* #endregion utilities */
 
 /* #region Tablet size */
 @media screen and (min-width: 809px){
+    .container{
+        max-width: 1140px;
+    }
+
     .col-md-8{
         width: calc(100% / 12 * 8);
+    }
+
+    .col-md-4-up{
+        width: calc(100% / 12 * 4 - 0.5rem);
     }
 
     .col-md-4{
         width: calc(100% / 12 * 4);
     }
+
+    .flex-md{
+        display: flex;
+        gap: 1rem;
+    }
 }
+
 /* #endregion Tablet size */
 
 /* #region Desktop size */
