--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,11 @@
     --subtitle-size: 3rem;
     --card-title-size: 1.5rem;
     --font-bold: 700;
+    --gap-size: 1.5rem;
 }
 
 header{
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     background-color: var(--primary);
 }
 
@@ -37,7 +38,7 @@ a{
 .flex{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--gap-size);
     flex-wrap: wrap;
 }
 
@@ -80,6 +81,54 @@ header a{
 /* #endregion header */
 
 /* #region main */
+.demo{
+    background-color: var(--light-primary);
+    border-radius: 1.5rem;
+    padding: 2rem;
+}
+
+.demo h4{
+    color: var(--primary);
+    text-align: center;
+    font-size: var(--card-title-size);
+    margin-bottom: 2rem;
+}
+
+.demo p{
+    color: var(--dark);
+    font-weight: var(--font-bold);
+    text-align: center;
+    line-height: 1.75rem;
+}
+
+.demo:first-child p{
+    text-align: left;
+    margin-bottom: 2.5rem;
+}
+
+.demo-icon{
+    color: var(--primary);
+    font-size: 5rem;
+    text-align: center;
+    margin-bottom: 0.75rem;
+}
+
+.btn-demo{
+    background-color: var(--primary);
+    padding: .5rem 2.5rem;
+    border-radius: 2rem;
+    word-spacing: .25rem;
+    color: white;
+    letter-spacing: 0.2rem;
+    font-weight: var(--font-bold);
+}
+
+.demo img{
+    width: 100%;
+    margin-top: 2.5rem;
+    margin-bottom: -2rem;
+    display: flex;
+}
 /* #endregion main */
 
 /* #region footer */
@@ -96,31 +145,35 @@ header a{
     }
 
     .col-md-4{
-        width: calc(100% / 12 * 4 - 0.67rem);
+        width: calc(100% / 12 * 4 - (var(--gap-size) / 3 * 2));
     }
 
     .col-md-6{
-        width: calc(100% / 12 * 6 - 0.5rem);
+        width: calc(100% / 12 * 6 - (var(--gap-size) / 2));
     }
 
     .col-md-8{
-        width: calc(100% / 12 * 8 - 0.33rem);
+        width: calc(100% / 12 * 8 - (var(--gap-size) / 3));
+    }
+
+    .demo img{
+        width: 50%;
     }
 }
 /* #endregion Tablet size */
 
 /* #region Desktop size */
-@media screen and (min-width: 1200px){    
-    .row-lg{
-        flex-direction: row;
+@media screen and (min-width: 1200px){ 
+    .flex-lg{
+        display: flex;
     }
 
     .col-lg-4{
-        width: calc(100% / 12 * 4 - 0.67rem);
+        width: calc(100% / 12 * 4 - (var(--gap-size) / 3 * 2));
     }
 
     .col-lg-6{
-        width: calc(100% / 12 * 6 - 0.5rem);
+        width: calc(100% / 12 * 6 - (var(--gap-size) / 2));
     }
 
     .menu-desktop{
@@ -129,6 +182,10 @@ header a{
 
     .fa-bars{
         display: none;
+    }
+
+    .demo img{
+        width: 40%;
     }
 }
 /* #endregion Desktop size */
